arguments mitigating performance issues when operating on huge
buffers.

+++
** The command 'delete-indentation' now operates on the active region.
If the region is active, the command joins all the lines in the
region.  When there's no active region, the command works on the
current and the previous or the next line, as before.


* Changes in Specialized Modes and Packages in Emacs 27.1

---
** telnet-mode
*** Reverting a buffer in `telnet-mode' will restart a closed
connection.

** goto-addr
*** A way to more conveniently specify what URI address schemes that
should be ignored have been added via the
`goto-address-uri-schemes-ignored' variable.

+++
** tex-mode
*** 'latex-noindent-commands' controls indentation of certain commands.
You can use this new variable to control indentation of arguments of
\emph, \footnote, and similar commands.

** byte compiler
*** byte-compile-dynamic is now obsolete
This is because on the one hand it suffers from various misbehaviors in corner
cases that have plagued it for years, and on the other experiments indicated
that it doesn't bring any measurable benefit.

** compile.el
---
*** In 'compilation-error-regexp-alist', 'line' (and 'end-line') can
be functions.

** cl-lib.el
+++
*** 'cl-defstruct' has a new ':noinline' argument to prevent inlining
its functions.

** doc-view.el
*** New commands 'doc-view-presentation' and 'doc-view-fit-window-to-page'.
*** Added support for password-protected PDF files

** Ido
*** New user option 'ido-big-directories' to mark directories whose
names match certain regular expressions as big.  Ido won't attempt to
list the contents of such directories when completing file names.

** Minibuffer

---
*** Minibuffer now uses 'minibuffer-message' to display error messages
at the end of the active minibuffer.

** map.el
*** Now also understands plists.
*** Now defined via generic functions that can be extended via 'cl-defmethod'.
*** Deprecate the 'map-put' macro in favor of a new 'map-put!' function.